# aoc

./: .gitignore
2015/day_01/: Cargo.toml
2015/day_01/src/: main.rs
2015/day_02/src/: main.rs
2015/day_03/: Cargo.toml
2015/day_03/src/: main.rs
2015/day_04/: Cargo.toml
2015/day_04/src/: main.rs
2015/day_05/: Cargo.toml
2015/day_05/src/: main.rs
2015/day_06/: main.py
2015/day_07/: main.py
2015/day_08/: main.py
2015/day_09/: main.py
2015/day_10/: main.py
2015/day_11/: main.py
2015/day_12/: main.py
2015/day_13/: main.py
2015/day_14/: CMakeLists.txt  Makefile
2015/day_14/src/: main.c
2015/day_15/: CMakeLists.txt
2015/day_15/src/: main.c
2015/day_16/: CMakeLists.txt
2015/day_16/src/: main.c
2015/day_17/: CMakeLists.txt
2015/day_17/src/: main.c
2015/day_18/: CMakeLists.txt
2015/day_18/src/: main.c
2015/day_19/: CMakeLists.txt
2015/day_19/src/: main.c
2015/day_20/src/: main.c
2015/day_21/: CMakeLists.txt
2015/day_21/src/: main.c
2015/day_22/src/: main.cpp
2015/day_23/src/: main.cpp
2015/day_24/: CMakeLists.txt
2015/day_24/src/: main.cpp
2015/day_25/src/: main.cpp
2016/day_01/: main.py
2016/day_02/: main.py
2016/day_03/: main.py
2016/day_04/: main.py
2016/day_05/: main.py
2016/day_06/: main.py
2016/day_07/: main.py
2016/day_08/: main.js
2016/day_09/: main.py
2016/day_10/: main.py
2017/day_01/: Cargo.toml
2017/day_01/src/: main.rs
2017/day_02/: Cargo.toml
2017/day_02/src/: main.rs
2017/day_05/: CMakeLists.txt
2017/day_06/: CMakeLists.txt
2017/day_06/src/: main.cpp
2018/day1/: puzzle1.pl
2018/day4/: puzzle1.py
2018/day_01/: frequency_calc.py  puzzle2.pl
2018/day_02/: puzzle1.pl  puzzle2.pl
2018/day_03/: puzzle.pl
2018/day_04/: puzzle1.py
2018/day_05/: polymer.py
2018/day_06/: Cargo.toml
2019/day_01/: sum_of_fuel.pl
2019/day_02/: gravity_assist.py
2019/day_08/: imageparser.py
2019/day_09/: intcodecomp.py
2019/day_10/: day10.py
2019/day_11/: robot.py
2019/day_12/: moonmotion.py
2019/day_14/: fuelcalc.py
2019/day_15/: mazerunner.py
2019/day_16/: fft.py
2019/day_17/: manual_calc.txt  vacuumbot.py
2019/day_18/: keyfinder.py
2020/computer/: Cargo.toml
2020/day_02/: Cargo.toml
2020/day_03/: Cargo.toml
2020/day_04/: Cargo.toml
2020/day_05/: Cargo.toml
2020/day_06/: Cargo.toml
2020/day_07/: Cargo.toml
2020/day_08/: Cargo.toml
2020/day_09/: Cargo.toml
2020/day_10/: Cargo.toml
2020/day_11/: Cargo.toml
2020/day_12/: Cargo.toml
2020/day_13/: Cargo.toml
2020/day_14/: Cargo.toml
2020/day_15/: Cargo.toml
2020/day_16/: Cargo.toml
2020/day_17/: Cargo.toml
2020/day_18/: Cargo.toml
2020/day_19/: Cargo.toml
2020/day_20/: Cargo.toml
2020/day_21/: Cargo.toml
2020/day_22/: Cargo.toml
2020/day_23/: Cargo.toml
2020/day_24/: Cargo.toml
2020/day_25/: Cargo.toml
2021/day_01/: main.py
2021/day_02/: main.py
2021/day_03/: main.py
2021/day_04/: main.py
2021/day_05/: main.py
2021/day_06/: main.py
2021/day_07/: main.py
2021/day_08/: main.py
2021/day_09/: main.py
2021/day_10/: main.py
2021/day_11/: main.py
2021/day_12/: main.py
2021/day_13/: main.py
2021/day_14/: main.py
2021/day_15/: main.py
2021/day_16/: main.py
2021/day_17/: main.py
2021/day_18/: main.py
2021/day_19/: main.py
2021/day_20/: main.py
2021/day_21/: main.py
2021/day_22/: main.py
2021/day_24/: main.py
2021/day_25/: main.py
2022/day_01/: main.js  main.py
2022/day_02/: main.py
2022/day_03/: main.py
2022/day_04/: main.py
2022/day_05/: main.py
2022/day_06/: main.py
2022/day_07/: main.py
2022/day_08/: main.py
2022/day_10/: CMakeLists.txt
2022/day_11/: CMakeLists.txt
2022/day_12/: CMakeLists.txt
2022/day_13/: main.py
2022/day_14/: main.py
2022/day_15/: main.py
2023/day_02/: CMakeLists.txt
2023/day_10/: CMakeLists.txt
2023/day_11/: CMakeLists.txt
2024/day_01/: CMakeLists.txt
2024/day_13/: test.py
2025/day_01/: CMakeLists.txt
2025/day_02/: CMakeLists.txt
2025/day_03/: CMakeLists.txt
2025/day_04/: CMakeLists.txt
day_01/: fuel_calc.pl
day_03/: day3.py
day_04/: day4.py
day_05/: intcodecomp.py
day_06/: orbitcounter.py
day_07/: intcodecomp.py
day_08/: imageparser.py
day_10/: day10.py
day_13/: arcade.py
lib/input_reader/: .vimrc  Cargo.toml
lib/libcollections/: CMakeLists.txt
lib/libcollections/include/: libcollections.h
lib/libcollections/src/: array.c  hashtable.c  heap.c  linkedlist.c  matrix.c  util.c  util.h
lib/libcollections/test/: test_array.c  test_hashtable.c  test_heap.c  test_linkedlist.c
lib/libinput/: CMakeLists.txt  Makefile
lib/liblists/: CMakeLists.txt  Makefile
templates/c/: .vimrc
(+79 files in other folders)
