[package]
name = "day_05"
version = "0.1.0"
authors = ["Linus Probert <linus.probert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.7.1"
input_reader = { path = "../../lib/input_reader/" }
